# cf-credential-service

./: .gitignore  Dockerfile  README.md  config.example.toml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  start.sh
.github/workflows/: docker.yml
examples/: Dockerfile.huggingface  usage_examples.py
proxy-extension/: background.js  manifest.json
src/: __init__.py  api.py  client.py  config.py  models.py  service.py
tests/: test_service.py  test_simple.py
